# ani2mcape

./: .gitignore  README.md  ani2macpe.py  pyproject.toml
src/ani2mcape/: __init__.py  cape.py  cli.py
src/ani2mcape/parser/: __init__.py  aniparser.py  capeparser.py  riffparser.py
